; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_callback_xdr.c_op_cb_push_deleg_res.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_callback_xdr.c_op_cb_push_deleg_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cb_push_deleg_res = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"push_deleg.status\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.cb_push_deleg_res*)* @op_cb_push_deleg_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @op_cb_push_deleg_res(i32* %0, %struct.cb_push_deleg_res* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.cb_push_deleg_res*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.cb_push_deleg_res* %1, %struct.cb_push_deleg_res** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.cb_push_deleg_res*, %struct.cb_push_deleg_res** %4, align 8
  %8 = getelementptr inbounds %struct.cb_push_deleg_res, %struct.cb_push_deleg_res* %7, i32 0, i32 0
  %9 = call i32 @xdr_enum(i32* %6, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = call i32 @CBX_ERR(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %15

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %14, %12
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @xdr_enum(i32*, i32*) #1

declare dso_local i32 @CBX_ERR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
